--- a/Alurabooks/style.css
+++ b/Alurabooks/style.css
@@ -8,6 +8,7 @@
     --laranja: rgba(235, 155, 0, 1);
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --fonte-principal: "Poppins";
+    --azul: #002F52;
 
 }
 
