--- a/Alurabooks/style.css
+++ b/Alurabooks/style.css
@@ -1,6 +1,7 @@
 @import url("styles/header.css");
 @import url("styles/banner.css");
 @import url("styles/carrosel.css");
+@import url("styles/topidos.css");
 
 :root {
     --cor-de-fundo: rgba(235, 236, 238, 1);
