--- a/Alurabooks/style.css
+++ b/Alurabooks/style.css
@@ -14,6 +14,10 @@
     --azul: #002F52;
     --fonte-secundaria: "Josef Sans";
     --preto: #000000;
+    --cinza: #474646;
+    --cinza-claro: #858585;
+
+
 
 }
 
