--- a/Alurabooks/styles/topicos.css
+++ b/Alurabooks/styles/topicos.css
@@ -30,6 +30,11 @@
     font-weight: 700;
 }
 
+.tópicos__link:hover {
+    color: purple;
+    background-color: wheat;
+}
+
 @media screen and (min-width: 1024px) {
     .tópicos__título {
         font-size: 24px;
